k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app

spec:
  type: ClusterIP

  selector:
    app: demo-app

  ports:
    - name: http
      port: 80
      targetPort: 80
