k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - demo.antonymica.site
      secretName: demo-app-tls

  rules:
    - host: demo.antonymica.site
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: demo-app
                port:
                  number: 80
